fix: spacing on main container

--- a/moca/static/css/style.css
+++ b/moca/static/css/style.css
@@ -55,7 +55,8 @@ main {
 }
 
 .main-container {
-  width: 80%;
+  width: 90%
+
 }
 
 /* Navbar styling */
